Bug 418740. Make sure that mouse events are reported to windowless plugins relative to the widget we associated with the plugin. r+sr=jst